objects/RCP_Receipt_ARG__c.object
<CustomObject>
    <fields>
        <fullName>AN8_AR__c</fullName>
        <description>AN8 JDE customer number</description>
        <label>AN8 JDE No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_AR__c</fullName>
        <description>Fantasy Name in JDE</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Receipts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AmountsControl_AR__c</fullName>
        <description>Amounts control to allow changing status only when calculatios is zero</description>
        <label>Amounts Control</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CollectionAgent_AR__c</fullName>
        <description>Collection agent code in JDE</description>
        <label>Collection Agent</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comercial_Discount_ID_JDE__c</fullName>
        <label>ID JDE dto. Comercial</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comercial_Discount__c</fullName>
        <label>Descuento Comercial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comment_AR__c</fullName>
        <description>Free text to add any comment</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomerPaymentOrder_AR__c</fullName>
        <description>Customer payment identifier</description>
        <label>Customer Payment Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_AR__c</fullName>
        <description>DD/MM/YY</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debit_AR__c</fullName>
        <label>Debit</label>
        <summarizedField>DBT_Debit_ARG__c.DebitAmount_AR__c</summarizedField>
        <summaryForeignKey>DBT_Debit_ARG__c.ReceiptNo_AR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DepositsAmount_AR__c</fullName>
        <description>Sum of &quot;Importe&quot; from section &quot;Depósitos&quot;</description>
        <label>Deposits Amount</label>
        <summarizedField>DPT_Deposit_ARG__c.Amount_AR__c</summarizedField>
        <summaryForeignKey>DPT_Deposit_ARG__c.ReceiptNo_AR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_AR__c</fullName>
        <description>To inform amounts of discount to apply in the collection</description>
        <label>Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DocumentsAmount_AR__c</fullName>
        <description>Sum of &quot;Importe a Aplicar&quot; from section Documentos, EXCEPT records with &apos;Document Type&apos; = &apos;RU&apos;</description>
        <label>Documents Amount</label>
        <summarizedField>DCM_Documents_ARG__c.Amounttoapply_AR__c</summarizedField>
        <summaryFilterItems>
            <field>DCM_Documents_ARG__c.tipoDocumento_AR__c</field>
            <operation>notEqual</operation>
            <value>RU</value>
        </summaryFilterItems>
        <summaryForeignKey>DCM_Documents_ARG__c.ReceiptNo_AR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Downpayments_AR__c</fullName>
        <description>To inform amount of downpayments within the collection</description>
        <label>Downpayments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Discount_ID_JDE__c</fullName>
        <label>ID JDE dto. Financiero</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Discount__c</fullName>
        <formula>Discount_AR__c + Comercial_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuento Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ID_JDE_Debito__c</fullName>
        <label>ID JDE Debito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_JDE_Downpayments__c</fullName>
        <label>ID JDE Pago a cuenta</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_TXT_Aplications_Document_AR__c</fullName>
        <label>Id TXT Aplications Document</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_TXT_Values_Document_AR__c</fullName>
        <label>Id TXT Values Document</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_No_Lote__c</fullName>
        <label>Numero de lote JDE de Aplicación</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_AR_DepositAccountType__c</fullName>
        <label>AR Deposit Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_AR_DocumentsAmountWithRU__c</fullName>
        <description>Sum of &quot;Importe a Aplicar&quot; from section Documents</description>
        <label>Documents Amount</label>
        <summarizedField>DCM_Documents_ARG__c.Amounttoapply_AR__c</summarizedField>
        <summaryForeignKey>DCM_Documents_ARG__c.ReceiptNo_AR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LAT_AR_IntegrationStatus__c</fullName>
        <label>AR Integration status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to JDE</fullName>
                </value>
                <value>
                    <fullName>Error in JDE</fullName>
                </value>
                <value>
                    <fullName>Registered in JDE</fullName>
                </value>
                <value>
                    <fullName>Manually Registered in JDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_AR_JDEReturnCode__c</fullName>
        <label>AR JDE Return Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_AR_MessageJDEIntegration__c</fullName>
        <label>AR Message JDE Integration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_AR_SendMail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by the system to trigger a workflow rule that sends an e-mail to the owner. The checkbox is set to true when a user with profile ARG_Tesorería clicks on the buttom &quot;Cancel Receipt&quot; and the receipt status is not &quot;Receipt Verified&quot;.</description>
        <label>AR Send Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_CancelMessage__c</fullName>
        <label>Cancel Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_ValidationStatusIcon__c</fullName>
        <formula>IF
(TEXT(LAT_ValidationStatus__c) == &apos;Validado&apos;, IMAGE(&quot;/resource/LAT_AR_Icons2/verified.png&quot;, &quot;Validado&quot;),
    IF 
    (TEXT(LAT_ValidationStatus__c) == &apos;Error en Validacion&apos;, IMAGE(&quot;/resource/LAT_AR_Icons2/error.png&quot;, &quot;Error en Validacion&quot;),
        IF
        (TEXT(LAT_ValidationStatus__c) == &apos;Validado CC&apos;, IMAGE(&quot;/resource/LAT_AR_Icons2/verifiedYellow.png&quot;, &quot;Validado CC&quot;),
       IF(TEXT(LAT_ValidationStatus__c) == &apos;Validado Ret&apos;, IMAGE(&quot;/resource/LAT_AR_Icons2/verifiedLightBlue.png&quot;, &quot;Validado Ret&quot;),
          IMAGE(&quot;/resource/LAT_AR_Icons2/bulletWhite.png&quot;, &quot;Sin Validar&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ValidationStatus__c</fullName>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sin Validar</fullName>
                    <default>true</default>
                    <label>Sin Validar</label>
                </value>
                <value>
                    <fullName>Validado</fullName>
                </value>
                <value>
                    <fullName>Error en Validacion</fullName>
                </value>
                <value>
                    <fullName>Validado CC</fullName>
                </value>
                <value>
                    <fullName>Validado Ret</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManualReceiptNumber_AR__c</fullName>
        <description>To inform Manual Receipt in Uruguay</description>
        <label>Manual Receipt Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WEB</fullName>
                    <default>true</default>
                    <label>WEB</label>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalRecordTypeId__c</fullName>
        <label>RecordType Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Ids_Verified__c</fullName>
        <label>Id de Pagos Verificados</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verificados</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RedemptionDateTime_AR__c</fullName>
        <description>Date and Time of receipt redemption process</description>
        <label>Redemption Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RedemptionNo_AR__c</fullName>
        <description>Automatic number of Redemption.  Prefix RE</description>
        <label>Redemption No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_AR__c</fullName>
        <description>Receipt Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt Issued Deposit pending</fullName>
                </value>
                <value>
                    <fullName>Receipt Issued Deposit done</fullName>
                </value>
                <value>
                    <fullName>Receipt printed Deposit pending</fullName>
                </value>
                <value>
                    <fullName>Receipt printed Deposit done</fullName>
                </value>
                <value>
                    <fullName>Receipt Sent to Treasury</fullName>
                </value>
                <value>
                    <fullName>Receipt Verified</fullName>
                </value>
                <value>
                    <fullName>Receipt with TXT</fullName>
                </value>
                <value>
                    <fullName>Receipt Value with Guarantee</fullName>
                </value>
                <value>
                    <fullName>Receipt printed with Value in Custody</fullName>
                </value>
                <value>
                    <fullName>Receipt cancelled</fullName>
                </value>
                <value>
                    <fullName>Receipt of Applying Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Aplicado_AR__c</fullName>
        <description>This will match if the reciept has been sent to JDE or not. At the moment of Collection Phase II we can see this status</description>
        <label>Status_Aplicado_AR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aplicado</fullName>
                </value>
                <value>
                    <fullName>No Aplicado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TXT_Aplications_AR__c</fullName>
        <formula>if(Id_TXT_Aplications_Document_AR__c!=null,HYPERLINK(&apos;servlet/servlet.FileDownload?file=&apos;+Id_TXT_Aplications_Document_AR__c,  $Label.BTN10_00004_AR, &apos;_self&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TXT Aplications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXT_Values_AR__c</fullName>
        <formula>if(Id_TXT_Values_Document_AR__c!=null,HYPERLINK(&apos;servlet/servlet.FileDownload?file=&apos;+Id_TXT_Values_Document_AR__c, $Label.BTN10_00004_AR,&apos;_self&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TXT Values</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Error_Message__c</fullName>
        <label>Mensaje de Error de Validación</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ValuesAmount_AR__c</fullName>
        <description>Sum of &quot;Importe&quot; de section Valores</description>
        <label>Values Amount</label>
        <summarizedField>VLS_Values_ARG__c.Amount_AR__c</summarizedField>
        <summaryForeignKey>VLS_Values_ARG__c.ReceiptNo_AR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WithholdingsAmount_AR__c</fullName>
        <description>Sum of &quot;Importe&quot; from section &quot;Retenciones&quot;</description>
        <label>Withholdings Amount</label>
        <summarizedField>TXC_TaxCertificates_ARG__c.Amount_AR__c</summarizedField>
        <summaryForeignKey>TXC_TaxCertificates_ARG__c.ReceiptNo_AR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>LAT Receipt</label>
    <listViews>
        <fullName>All_Receipts</fullName>
        <columns>NAME</columns>
        <columns>LAT_ValidationStatusIcon__c</columns>
        <columns>AN8_AR__c</columns>
        <columns>Account_AR__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status_AR__c</columns>
        <columns>DepositsAmount_AR__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>WithholdingsAmount_AR__c</columns>
        <columns>LAT_AR_IntegrationStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_AR_IntegrationStatus__c</field>
            <operation>equals</operation>
            <value>Registered in JDE</value>
        </filters>
        <filters>
            <field>LAT_AR_DepositAccountType__c</field>
            <operation>equals</operation>
            <value>R</value>
        </filters>
        <label>All Receipts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cancelados</fullName>
        <columns>NAME</columns>
        <columns>AmountsControl_AR__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_AR__c</field>
            <operation>equals</operation>
            <value>Receipt cancelled</value>
        </filters>
        <label>Cancelados</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recibos_Rendidos</fullName>
        <columns>RedemptionNo_AR__c</columns>
        <columns>LAT_ValidationStatusIcon__c</columns>
        <columns>NAME</columns>
        <columns>AN8_AR__c</columns>
        <columns>Account_AR__c</columns>
        <columns>Status_AR__c</columns>
        <columns>Payment_Ids_Verified__c</columns>
        <columns>DepositsAmount_AR__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_AR__c</field>
            <operation>equals</operation>
            <value>Receipt Sent to Treasury</value>
        </filters>
        <label>Recibos Rendidos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recibos_Rendidos_Cta_Cte_Ret_Cust</fullName>
        <columns>RedemptionDateTime_AR__c</columns>
        <columns>NAME</columns>
        <columns>AN8_AR__c</columns>
        <columns>Account_AR__c</columns>
        <columns>Status_AR__c</columns>
        <columns>DepositsAmount_AR__c</columns>
        <columns>ValuesAmount_AR__c</columns>
        <columns>WithholdingsAmount_AR__c</columns>
        <columns>LAT_AR_JDEReturnCode__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_AR__c</field>
            <operation>equals</operation>
            <value>Receipt Sent to Treasury</value>
        </filters>
        <filters>
            <field>LAT_AR_DepositAccountType__c</field>
            <operation>notEqual</operation>
            <value>R</value>
        </filters>
        <label>Recibos Rendidos-Cta Cte / Ret / Cust</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recibos_Rendidos_Cta_Recaudadora</fullName>
        <columns>RedemptionNo_AR__c</columns>
        <columns>LAT_ValidationStatusIcon__c</columns>
        <columns>NAME</columns>
        <columns>AN8_AR__c</columns>
        <columns>Account_AR__c</columns>
        <columns>Status_AR__c</columns>
        <columns>DepositsAmount_AR__c</columns>
        <columns>LAT_AR_JDEReturnCode__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_AR__c</field>
            <operation>equals</operation>
            <value>Receipt Sent to Treasury</value>
        </filters>
        <filters>
            <field>LAT_AR_DepositAccountType__c</field>
            <operation>equals</operation>
            <value>R</value>
        </filters>
        <label>Recibos Rendidos-Cta Recaudadora</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recibos_Verificados</fullName>
        <columns>RedemptionNo_AR__c</columns>
        <columns>LAT_ValidationStatusIcon__c</columns>
        <columns>LAT_AR_DepositAccountType__c</columns>
        <columns>NAME</columns>
        <columns>AN8_AR__c</columns>
        <columns>Account_AR__c</columns>
        <columns>Status_AR__c</columns>
        <columns>LAT_AR_IntegrationStatus__c</columns>
        <columns>DepositsAmount_AR__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAT_AR_JDEReturnCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_AR__c</field>
            <operation>equals</operation>
            <value>Receipt Verified</value>
        </filters>
        <label>Recibos Verificados</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recibos_con_Deposito_Pendiente</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>AN8_AR__c</columns>
        <columns>Account_AR__c</columns>
        <columns>Status_AR__c</columns>
        <columns>DepositsAmount_AR__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RCP_Receipt_ARG__c.RCP_ReceiptGeneratedDepositPending_AR</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RCP_Receipt_ARG__c.RCP_ReceiptPrintedDepositPending_AR</value>
        </filters>
        <label>Recibos con Deposito Pendiente</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recibos_con_Deposito_Pendiente_w</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>AN8_AR__c</columns>
        <columns>Account_AR__c</columns>
        <columns>Status_AR__c</columns>
        <columns>DepositsAmount_AR__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RCP_Receipt_ARG__c.RCP_ReceiptGeneratedDepositPending_AR</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RCP_Receipt_ARG__c.RCP_ReceiptPrintedDepositPending_AR</value>
        </filters>
        <label>Recibos con Deposito Pendiente w</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recibos_para_rendir</fullName>
        <columns>NAME</columns>
        <columns>LAT_ValidationStatusIcon__c</columns>
        <columns>AN8_AR__c</columns>
        <columns>Account_AR__c</columns>
        <columns>Status_AR__c</columns>
        <columns>DepositsAmount_AR__c</columns>
        <columns>WithholdingsAmount_AR__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_AR__c</field>
            <operation>equals</operation>
            <value>Receipt printed Deposit done</value>
        </filters>
        <label>Recibos para rendir</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X_Estados</fullName>
        <columns>NAME</columns>
        <columns>Account_AR__c</columns>
        <columns>Status_AR__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_AR__c</field>
            <operation>notEqual</operation>
            <value>Receipt Verified,Receipt cancelled</value>
        </filters>
        <label>X Estados</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Receipt No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT Receipts</pluralLabel>
    <recordTypes>
        <fullName>LAT_AR_RCP_ReceiptCancelled</fullName>
        <active>true</active>
        <label>AR Receipt Cancelled</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_AR_RCP_ReceiptOfApplyingDocuments</fullName>
        <active>false</active>
        <label>AR Receipt of Applying Documents</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_AR_RCP_ReceiptPrintedValueGuarantee</fullName>
        <active>true</active>
        <label>AR Receipt Printed with value in guarantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_AR_RCP_ReceiptValueGuarantee</fullName>
        <active>true</active>
        <label>AR Receipt with value in guarantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCP_ReceiptGeneratedDepositDone_AR</fullName>
        <active>true</active>
        <label>Receipt generated deposit done AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCP_ReceiptGeneratedDepositDone_UY</fullName>
        <active>true</active>
        <label>Receipt generated deposit done UY</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCP_ReceiptGeneratedDepositPending_AR</fullName>
        <active>true</active>
        <label>Receipt generated deposit pending AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCP_ReceiptGeneratedDepositPending_UY</fullName>
        <active>true</active>
        <label>Receipt generated deposit pending UY</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCP_ReceiptPrintedDepositDone_AR</fullName>
        <active>true</active>
        <label>Receipt printed deposit done AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCP_ReceiptPrintedDepositDone_UY</fullName>
        <active>true</active>
        <label>Receipt printed deposit done UY</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCP_ReceiptPrintedDepositPending_AR</fullName>
        <active>true</active>
        <label>Receipt printed deposit pending AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCP_ReceiptPrintedDepositPending_UY</fullName>
        <active>true</active>
        <label>Receipt printed deposit pending UY</label>
    </recordTypes>
    <recordTypes>
        <fullName>Receipt_withholding_certificates_AR</fullName>
        <active>true</active>
        <label>Receipt withholding certificates AR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>